fix: add aggregated displays